--- a/src/main/webapp/new_account.html
+++ b/src/main/webapp/new_account.html
@@ -92,7 +92,7 @@
 	      </div>
 	    </div>
 	  </main>
-
+		<!-- Modal de credenciales vacias -->
 		<div class="modal fade" id="empty-credentials-new-account" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered rounded" id="empty-credentials-dialog">
 			<div class="modal-content px-3">
