--- a/src/main/webapp/cuenta.html
+++ b/src/main/webapp/cuenta.html
@@ -59,7 +59,7 @@
                 <div class="nav-tabs-container">
                     <ul class="nav nav-tabs myebay-tabs w-100 justify-content-start">
                         <li class="nav-item">
-                            <a class="nav-link" href="actividad.html">Actividad</a>
+                            <a class="nav-link" href="L_F.html">Actividad</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="cuenta.html">Cuenta</a>
